# nvidia-zerodb

./: Cargo.toml  README.md  build.rs
assets/: nvidia-zerodb.conf  nvidia-zerodb.service
aur/: .gitignore  PKGBUILD
src/: config.rs  logging.rs  main.rs  signals.rs
src/manager/: failsafes.rs  gpu.rs  mod.rs
