[package]
name = "nvidia-zerodb"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
strip = "symbols"
lto= true

[dependencies]
anyhow = "1.0.66"
log = "0.4.17"
notify-rust = "4.6.0"
pretty_env_logger = "0.4.0"
rust-ini = "0.18.0"
signal-hook = "0.3.14"

[build-dependencies]
anyhow = "1.0.66"
vergen = { version = "7.4.3", default-features = false, features = ["build", "rustc", "cargo", "si", "git"] }
